kubernetes/ingress/templates/nginx-ingress-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ajtheamazing
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ajtheamazing.com
    - www.ajtheamazing.com
    secretName: ajtheamazing-tls
  rules:
  - host: www.ajtheamazing.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ajtheamazing
            port:
              number: 8080
  - host: ajtheamazing.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ajtheamazing
            port:
              number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blog
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - blog.ajtheamazing.com
    secretName: blog-tls
  rules:
  - host: blog.ajtheamazing.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog
            port:
              number: 80
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - jenkins.ajtheamazing.com
    secretName: jenkins-tls
  rules:
  - host: jenkins.ajtheamazing.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8085
  ingressClassName: nginx
